outputs/tsp_constructive-constructive/2025-09-21_01-27-23/evaluations/problem_eval3038018029034827053_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default 1.2) to the distance if the node is closer to the destination than the current node to the destination, balancing proximity and global path considerations.}
               ^
SyntaxError: unmatched ')'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default 1.2) to the distance if the node is closer to the destination than the current node to the destination, balancing proximity and global path considerations.}
               ^
SyntaxError: unmatched ')'
